# reifinator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  publish-python.yml  publish-typescript.yml
docs/: configuration.md  python-api.md  template-guide.md  typescript-api.md
examples/online-store/: README.md  reifinator-eta.yaml  reifinator-jinja2.yaml  reifinator-mako.yaml  reifinator-nunjucks.yaml  reifinator.yaml
examples/online-store/models/: model.json
examples/online-store/templates/: index.html.mako
examples/online-store/templates-eta/: _gen_context.js  index.html.eta
examples/online-store/templates-jinja2/: index.html.j2
examples/online-store/templates-mako/: _gen_context.py
examples/online-store/templates-nunjucks/: index.html.njk
implementations/python/: README.md  pyproject.toml
implementations/python/src/reifinator/: __init__.py  cli.py  config.py  content.py  context.py  generator.py  output.py  resolution.py
implementations/python/src/reifinator/adapters/: jinja2.py  mako.py
implementations/python/tests/: conftest.py  test_spec_cases.py
implementations/typescript/: README.md  package-lock.json  package.json  tsup.config.ts
implementations/typescript/src/: cli.ts  config.ts  content.ts  context.ts  generator.ts  index.ts  output.ts  resolution.ts
implementations/typescript/tests/: spec-cases.test.ts  spec-loader.ts
spec/: grammar.md  test-framework.md
spec/cases/05_unresolved_error/: expected_error.txt
spec/cases/06_placeholder_files/: context.json
(+46 files in other folders)
